--- a/app/src/main/res/layout-land/fragment_start.xml
+++ b/app/src/main/res/layout-land/fragment_start.xml
@@ -16,31 +16,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/red"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/black"
             android:layout_margin="5dp">
-
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imageView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="4dp"
                 android:background="@color/white"
                 android:clipToOutline="true"
                 android:outlineProvider="background"
+                android:scaleType="centerCrop"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintHeight_percent="0.45"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/roundedImageView"
-                tools:src="@drawable/question_mark"
                 pokemonImage="@{viewModel.pokemonScreen.img}"/>
 
             <TextView
@@ -69,6 +68,7 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:background="@drawable/all_rounded_corners"
                 android:gravity="center"
                 android:letterSpacing="0.3"
                 android:padding="0.05dp"
@@ -79,9 +79,9 @@
                 app:layout_constraintStart_toEndOf="@id/imageView"
                 app:layout_constraintTop_toBottomOf="@id/name_textView"
                 app:layout_constraintWidth_percent="0.23"
-                tools:text="PSYCHIC"
-                tools:background="@color/type_psychic"
-                pokemonType1="@{viewModel.pokemonScreen.types}"/>
+                style="@style/CustomRoundedCorners"
+                pokemonType1="@{viewModel.pokemonScreen.types}"
+                tools:text="PSYCHIC" />
 
             <TextView
                 android:id="@+id/type_textView2"
@@ -89,6 +89,7 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
                 android:background="@drawable/all_rounded_corners"
+                android:backgroundTint="@color/purple_500"
                 android:gravity="center"
                 android:letterSpacing="0.3"
                 android:padding="0.05dp"
@@ -99,8 +100,8 @@
                 app:layout_constraintStart_toEndOf="@id/type_textView"
                 app:layout_constraintTop_toTopOf="@id/type_textView"
                 app:layout_constraintWidth_percent="0.23"
-                pokemonType2="@{viewModel.pokemonScreen.types}"
-                tools:text="FLYING" />
+                tools:text="FLYING"
+                pokemonType2="@{viewModel.pokemonScreen.types}"/>
 
             <FrameLayout
                 android:id="@+id/dimensions_layout"
@@ -173,8 +174,8 @@
                 app:layout_constraintTop_toBottomOf="@id/imageView"
                 app:layout_constraintStart_toStartOf="@id/imageView"
                 app:layout_constraintEnd_toEndOf="@id/dimensions_layout"
-                pokemonDescription="@{viewModel.pokemonScreen.description}"
                 style="@style/CustomRoundedCorners"
+                pokemonDescription="@{viewModel.pokemonScreen.description}"
                 tools:text="Often hides in water to stalk unwary prey. For swimming fast, it moves its ears to maintain balance." />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -182,15 +183,15 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:background="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
             android:clipToPadding="false"
             android:padding="16dp"
-            tools:listitem="@layout/pokemon_item_view"
-            />
+            tools:listitem="@layout/pokemon_item_view" />
+
     </LinearLayout>
 </layout>
